<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/resize_background"
    tools:context=".profile.ChangeImageActivity">

    <ImageView
        android:id="@+id/ivTopBlock"
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:background="@color/deep_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/h5Medium"
        android:id="@+id/tvResizeHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:layout_marginStart="24dp"
        android:gravity="center_horizontal"
        android:text="@string/resize_photo_title"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/ivTopBlock"
        app:layout_constraintStart_toStartOf="@+id/ivTopBlock" />

    <TextView
        android:id="@+id/tvResizeMessage"
        style="@style/h5Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:text="@string/resize_photo_message"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivTopBlock" />

    <Button
        android:id="@+id/btnSetPhoto"
        style="@style/selectBlueButton"
        android:text="@string/resize_photo_button"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clBottomSheet"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/tvBottomSheetMessage"
            style="@style/h5Medium"
            android:layout_width="327dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:gravity="center_horizontal"
            android:text="@string/bottom_sheet_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnMemoryChoose"
            style="@style/selectBlueButton"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:text="@string/sheet_choose_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvBottomSheetMessage" />

        <Button
            android:id="@+id/btnCameraChoose"
            style="@style/selectBlueButton"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:text="@string/sheet_choose_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnMemoryChoose" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>