<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.profile.UserProfileActivity">

    <ImageView
        android:id="@+id/ivUserPhoto"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:elevation="2dp"
        app:layout_constraintStart_toStartOf="@+id/ivTopBlock"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivTopBlock"
        android:layout_width="match_parent"
        android:layout_height="231dp"
        android:background="@color/deep_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUserWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text = "Your profile, Emil"
        style="@style/h5Medium"
        android:textColor="@color/white"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivUserPhoto" />

    <Button
        style="@style/selectBlueButton"
        android:id="@+id/btnLogout"
        android:layout_marginBottom="26dp"
        android:text="@string/profile_logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnChangeImage"
        style="@style/selectBlueButton"
        android:layout_marginBottom="14dp"
        android:text="@string/profile_change_image"
        app:layout_constraintBottom_toTopOf="@+id/btnLogout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnChangeLanguage"
        style="@style/selectBlueButton"
        android:layout_marginBottom="14dp"
        android:text="@string/profile_change_language"
        app:layout_constraintBottom_toTopOf="@+id/btnChangeImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSwitchTheme"
        style="@style/selectBlueButton"
        android:layout_marginBottom="14dp"
        tools:text="@string/profile_switch_to_dark"
        app:layout_constraintBottom_toTopOf="@+id/btnChangeLanguage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>