<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".account.signup.SignupFirstFragment">


    <TextView
        android:id="@+id/tvSignupTitle"
        style="@style/h5Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_welcome_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSignupTitle">

        <TextView
            android:id="@+id/tvPasswordTitle"
            style="@style/bodyMediumSmallTitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_password_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/toggle_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPasswordTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPasswordEditText"
                style="@style/textInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_password_hint"
                android:inputType="textPassword" />


        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clConfirm"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clPassword">

        <TextView
            android:id="@+id/tvConfirmTitle"
            style="@style/bodyMediumSmallTitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_confirm_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/toggle_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvConfirmTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputConfirmEditText"
                style="@style/textInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_confirm_hint"
                android:inputType="textPassword" />


        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>